--- a/style.css
+++ b/style.css
@@ -138,14 +138,15 @@ form div#regulamin
     display: inline-block;
 }
 
-input[type=submit]
+input[type=submit],
+input[type=button]
 {
     width:300px;
     background-color: #00aa96;
     font-size:22px;
     color: white;
     padding: 15px 10px;
-    margin: 20px 4px 30px 0px;
+    margin: 20px 2px 30px 2px;
     border: none;
     border-radius: 3px;
     cursor: pointer;
@@ -176,7 +177,8 @@ input[type=submit]
     font-size:25px;
 }
 
-input[type=submit]:hover
+input[type=submit]:hover,
+input[type=button]:hover
 {
     background-color:white;
     color: black;
@@ -404,10 +406,49 @@ h2
 
 #btnEdit
 {
+    display:block;
+    width:30px;
+    height:30px;
+    background-repeat: no-repeat;
+    background-position: 5px 5px;
+    background-size: 20px 20px;
+    font-size: 0;
+    background-image: url(img/editicon.png);
+    border-radius: 10%;
+    display: inline-block;
     background-color: #00aa96;
-    background: url("img/editicon.png") no-repeat scroll 0 0 transparent;
-    width:115px;
-    height:115px;
+    position: absolute;
+    margin-left: 15px;
+    border:none;
+    cursor:pointer;
+}
+
+.btnSmall
+{
+    
+    width:132px !important;
+    height: 55px;
+    font-size: 0.8em !important;
+    margin-top:0 !important;
+    margin-bottom:20px !important;
+}
+
+
+
+.custom-select2
+{
+    height: 57px;
+    border:2px solid #ddd;
+    border-radius: 3px;
+    padding:10px;
+    box-sizing: border-box;
+    outline: none;
+    width:275px;
+    text-align-last: center;
+    padding-right: 29px;
+    font-size: 1.45rem;
+    font-family: 'Baloo', cursive;
+    margin:0;
 }
 
 #regionText--hide
