--- a/style.css
+++ b/style.css
@@ -455,3 +455,43 @@ h2
 {
     display:none;
 }
+
+
+/* Tables
+================================== */
+.Rtable {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 1.5em auto;
+  padding: 0;
+  width:70%;
+  
+}
+.Rtable-cell {
+  box-sizing: border-box;
+  flex-grow: 1;
+  width: 100%;
+  padding: 0.2em 0.2em;
+  overflow: hidden;
+  list-style: none;
+  border: solid 1px white;
+  background: #EAEAEA;
+}
+
+.Rtable-cell--head{
+    border-top-left-radius: 5%;
+    border-top-right-radius: 5%;
+    background: #00aa96;
+    color:white;
+  }
+
+.Rtable-cell--delete{
+    width:5% !important;
+}
+/* Table column sizing
+================================== */
+.Rtable--2cols > .Rtable-cell  { width: 50%; }
+.Rtable--3cols > .Rtable-cell  { width: 33.33%; }
+.Rtable--4cols > .Rtable-cell  { width: 25%; }
+.Rtable--5cols > .Rtable-cell  { width: 20%; }
+.Rtable--6cols > .Rtable-cell  { width: 16.6%; }
