--- a/style.css
+++ b/style.css
@@ -509,3 +509,32 @@ h2
 [id$="--hide"]{
     display:none;
 }
+
+#dodajdziecko{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    padding:5px;
+    padding-left:8px;
+    font-size:1.3em;
+}
+
+#dodajdziecko:hover{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    padding:0px;
+    padding-bottom:10px;
+    padding-left:3px;
+}
+
+.btnAdd{
+    position:relative;
+    width: 10%;
+    left: 75%;
+    bottom: 105px;
+}
+
+.addText{
+
+}
