--- a/style.css
+++ b/style.css
@@ -462,16 +462,19 @@ h2
     color:white;
   }
 
+.Rtable-cell--first{
+    width:10% !important;
+}
+
 .Rtable-cell--delete{
     width:5% !important;
 }
 /* Table column sizing
 ================================== */
-.Rtable--2cols > .Rtable-cell  { width: 50%; }
-.Rtable--3cols > .Rtable-cell  { width: 33.33%; }
-.Rtable--4cols > .Rtable-cell  { width: 25%; }
-.Rtable--5cols > .Rtable-cell  { width: 20%; }
-.Rtable--6cols > .Rtable-cell  { width: 16.6%; }
+
+.Rtable--3cols > .Rtable-cell  { width: 45%; }
+.Rtable--4cols > .Rtable-cell  { width: 42.5%; }
+
 
 
 .Rtable-cell--delete>input[type="submit"] {
@@ -528,11 +531,8 @@ h2
     padding-left:3px;
 }
 
-.btnAdd{
-    position:relative;
-    width: 10%;
-    left: 75%;
-    bottom: 105px;
+.addChild{
+    
 }
 
 .addText{
